Added partners app

--- a/pages/templates/layout/base.html
+++ b/pages/templates/layout/base.html
@@ -3,16 +3,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <meta name="description" content="Hustler Digital — це ідеальне combo з ефективних інструментів маркетингу, експірієнс і лідерів думок." />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta itemprop="description" content="Hustler Digital — це ідеальне combo з ефективних інструментів маркетингу, експірієнс і лідерів думок." />
-    <meta property="og:title" content="Hustler" />
-    <meta property="og:type" content="site" />
-    <meta property="og:image" content="" />
-    <meta property="og:description" content="Hustler Digital — це ідеальне combo з ефективних інструментів маркетингу, експірієнс і лідерів думок." />
-    <meta property="og:site_name" content="Hustler" />
-    <meta name="robots" content="max-image-preview:large" />
     <title>{% block title %}Home{% endblock %} - Hustler</title>
     <meta name="description" content="Hustler Digital — это идеальное combo из эффективных инструментов маркетинга, экспириенса и лидеров мнений." />
     <link rel="stylesheet" href="{% static 'css/cms-navigation-base.css' %}" type="text/css" media="screen" />
@@ -23,7 +15,7 @@
     <link rel="stylesheet" href="{% static 'css/metismenujs.css' %}" type="text/css" media="all" />
     <link rel="stylesheet" href="{% static 'css/onoffcanvas.min.css' %}" type="text/css" media="all" />
     <link rel="stylesheet" href="{% static 'css/mm-onoffcanvas.css' %}" type="text/css" media="all" />
-    <link rel="stylesheet" href="./css/lightbox.min.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="{% static './css/lightbox.min.css' %}" type="text/css" media="all" />
     <link rel="stylesheet" href="{% static 'css/anims.css' %}" type="text/css" media="all" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css" media="all" />
     <script src="{% static 'js/script.min.js' %}"></script>
