--- a/partners/templates/partners/list.html
+++ b/partners/templates/partners/list.html
@@ -1,9 +1,11 @@
+{% load i18n %}
+
 {% if partners %}
 <div id="partners" class="partners">
     <div class="container">
         <div class="row">
             <div class="col-12 col-md-12 col-lg-12 col-xl-12">
-                <h2>Партнери</h2>
+                <h2>{% trans "Partners" %}</h2>
             </div>
         </div>
     </div>
